--- a/ParkingAppService/ParkingAppService.csproj
+++ b/ParkingAppService/ParkingAppService.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlacesController.cs" />
     <Compile Include="Controllers\SlotsController.cs" />
+    <Compile Include="Controllers\SlotsViewController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
