--- a/ParkingAppService/Web.config
+++ b/ParkingAppService/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ParkingAppService-20171121114840.mdf;Initial Catalog=aspnet-ParkingAppService-20171121114840;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=CL-LAKSHITHAM\SQLEXPRESS;Initial Catalog=ParkingDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="ParkingDBEntities" connectionString="metadata=res://*/ParkingDataModel.csdl|res://*/ParkingDataModel.ssdl|res://*/ParkingDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CL-LAKSHITHAM\SQLEXPRESS;initial catalog=ParkingDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
